Add game starting
Adds a game started state that prevents building etc. With it
I added validations to the build type so that they are standard
rails errors and can be used in the views as errors to facilitate
further build validation.

--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -4,8 +4,13 @@ one:
   name: MyString
   min_players: 1
   max_players: 1
+  started: nil
+  user: one
 
 two:
   name: MyString
   min_players: 1
   max_players: 1
+  started: nil
+  user: two
+
