--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,11 +7,14 @@
 one: 
   email: tester1@tester.afaf
   encrypted_password: <%= User.new.send(:password_digest, 'password1') %>
+  handle: junapelaaja
 
 two: 
   email: tester2@tester.afaf
   encrypted_password: <%= User.new.send(:password_digest, 'password2') %>
+  handle: pyllynmarsa
 
 three:
   email: tester3@tester.afaf
   encrypted_password: <%= User.new.send(:password_digest, 'password3') %>
+  handle: tiistai_murekepäivä
